src/dotnet/Chat.UI.Blazor/Components/ChatAudioPanel/chat-audio-panel.css
/* ChatAudioPanel */
.chat-audio-panel {
    @apply flex-x;
    @apply justify-center;
    @apply rounded-none outline-none;
    @apply bg-01;
}
/* ChatAudioPanel, Mobile view */
.narrow .chat-audio-panel {
    @apply w-full;
    @apply self-stretch items-center;
    @apply gap-x-6;
    @apply py-2 mb-0.5;
    @apply rounded-b-4xl;
    background: linear-gradient(to top, rgba(255,255,255,1) 5%, rgba(255,255,255,1) 35%, transparent);
}
/* ChatAudioPanel, Mobile view, Text mode */
.narrow-panel.narrow .chat-audio-panel {
    @apply gap-x-2;
    @apply py-1;
    @apply bg-01;
}
/* ChatAudioPanel, Desktop view */
.wide .chat-audio-panel {
    @apply h-12;
    @apply self-end items-end;
    @apply gap-x-2.5;
}

/* Buttons */
.chat-audio-panel .btn.btn-round .btn-content {
    @apply rounded-full;
    @apply bg-03;
}
.chat-audio-panel .record-off-btn.btn .btn-content,
.chat-audio-panel .record-off-btn.btn:hover .btn-content {
    @apply bg-gradient-to-b from-primary to-[#B60B84];
    @apply text-04;
}
.chat-audio-panel .record-on-btn.btn .btn-content,
.chat-audio-panel .record-on-btn.btn:hover .btn-content {
    @apply bg-[#FF3880];
    @apply text-04;
}
.chat-audio-panel .language-button,
.chat-audio-panel .playback-wrapper,
.chat-audio-panel .recorder-wrapper,
.chat-audio-panel .recorder-button {
    @apply rounded-full;
    @apply transition-all ease-linear duration-100;
}
.chat-audio-panel .recorder-wrapper {
    @apply border;
}
.recorder-wrapper .recorder-icon {
    @apply h-10 w-10;
}
.narrow-panel.narrow .recorder-wrapper .recorder-icon,
.wide .recorder-wrapper .recorder-icon {
    @apply h-7 w-7;
}

/* Buttons, Mobile view */
.narrow .chat-audio-panel .btn.btn-round .btn-content {
    @apply min-h-12 max-h-12 min-w-12 max-w-12;
}
.narrow .chat-audio-panel .language-button,
.narrow .chat-audio-panel .playback-wrapper,
.narrow .chat-audio-panel .recorder-wrapper {
    @apply shadow-scrollbar shadow-md;
}
.narrow .chat-audio-panel .language-button:active,
.narrow .chat-audio-panel .playback-wrapper:active,
.narrow .chat-audio-panel .recorder-button:active {
    @apply translate-y-0.5;
}
.narrow .chat-audio-panel .btn.chat-language-toggle {
    @apply text-primary;
}
.narrow .chat-audio-panel .recorder-wrapper {
    @apply flex;
    @apply h-20 w-20;
    @apply justify-center;
    @apply transition-none;
}
.narrow .chat-audio-panel .recorder-wrapper:active {
    @apply translate-y-0 transition-none;
}
.narrow .chat-audio-panel .recorder-wrapper .btn {
    @apply self-center;
}
.narrow .chat-audio-panel .recorder-wrapper .btn .btn-content {
    @apply min-w-17 max-w-17 min-h-17 max-h-17;
    @apply text-04;
}
.narrow .chat-audio-panel .recorder-button .btn.recorder-skeleton .btn-content {
    @apply min-w-20 min-h-20;
}
.chat-audio-panel .recorder-wrapper.record-off,
.chat-audio-panel .recorder-wrapper.record-on-to-off {
    @apply w-20 h-20;
    @apply rounded-full;
    @apply border border-double border-transparent;
    background-image: linear-gradient(white, white), linear-gradient(to bottom, #2970FF, #C60077);
    background-origin: border-box;
    background-clip: padding-box, border-box;
}
.chat-audio-panel .recorder-wrapper.record-on,
.chat-audio-panel .recorder-wrapper.record-off-to-on {
    @apply border-[#FF3880];
    @apply transition-colors duration-300;
}
.narrow .chat-audio-panel .recorder-wrapper.record-off .record-on-btn.btn {
    @apply absolute;
    @apply scale-0;
}
.narrow .chat-audio-panel .recorder-wrapper.record-off .record-off-btn.btn {
    @apply scale-100;
}
.narrow .chat-audio-panel .recorder-wrapper.record-off-to-on .record-off-btn.btn {
    @apply absolute;
    @apply scale-0;
    @apply animate-scale-to-5;
}
.narrow .chat-audio-panel .recorder-wrapper.record-off-to-on .record-on-btn.btn {
    @apply scale-100;
    @apply animate-scale-to-full;
}
.narrow .chat-audio-panel .recorder-wrapper.record-on .record-off-btn.btn {
    @apply absolute;
    @apply scale-0;
}
.narrow .chat-audio-panel .recorder-wrapper.record-on .record-on-btn.btn {
    @apply scale-100;
}
.narrow .chat-audio-panel .recorder-wrapper.record-on-to-off .record-on-btn.btn {
    @apply absolute;
    @apply scale-0;
    @apply animate-scale-to-5;
}
.narrow .chat-audio-panel .recorder-wrapper.record-on-to-off .record-off-btn.btn {
    @apply scale-100;
    @apply animate-scale-to-full;
}
.narrow .chat-audio-panel .playback-button {
    @apply w-24;
    @apply -mr-12;
}
.narrow .chat-audio-panel .playback-button .playback-wrapper {
    @apply relative flex-x;
    @apply h-12;
    @apply bg-03;
}
.narrow .chat-audio-panel .playback-button .playback-wrapper .btn.btn-round {
    @apply absolute;
}
.narrow .playback-wrapper .loud-btn {
    @apply self-center;
}
.narrow .playback-wrapper.listen-on {
    @apply w-24;
}
.narrow .playback-wrapper.listen-on .loud-btn.btn.btn-round {
    @apply opacity-100;
    @apply translate-x-12;
}
.narrow .playback-wrapper.listen-off {
    @apply w-12;
}
.narrow .playback-wrapper.listen-off .loud-btn.btn.btn-round {
    @apply absolute;
    @apply opacity-0;
    @apply translate-x-12;
}
.narrow .playback-wrapper.listen-on-to-off {
    @apply w-12;
    @apply animate-width-full-to-half;
}
.narrow .playback-wrapper.listen-on-to-off .loud-btn.btn.btn-round {
    @apply absolute;
    @apply opacity-0;
    @apply scale-0;
    @apply animate-loud-hide;
    @apply transition duration-300;
}
.narrow .playback-wrapper.listen-off-to-on {
    @apply w-24;
    @apply animate-width-half-to-full;
}
.narrow .playback-wrapper.listen-off-to-on .loud-btn.btn.btn-round {
    @apply absolute;
    @apply translate-x-12;
    @apply animate-loud-show;
}

/* Buttons, Mobile view, Text mode */
.narrow-panel.narrow .chat-audio-panel .btn.btn-round .btn-content {
    @apply min-w-20 max-w-20 min-h-12 max-h-12;
}
.narrow-panel.narrow .chat-audio-panel .btn.btn-round svg {
    @apply h-6 w-6;
}
.narrow-panel.narrow .chat-audio-panel .language-button,
.narrow-panel.narrow .chat-audio-panel .playback-wrapper,
.narrow-panel.narrow .chat-audio-panel .recorder-wrapper {
    @apply shadow-sm shadow-scrollbar;
}
.narrow-panel.narrow .chat-audio-panel .recorder-wrapper {
    @apply h-auto w-auto;
    @apply border-0;
}
.narrow-panel.narrow .chat-audio-panel .playback-button {
    @apply w-20;
    @apply m-0;
}
.narrow-panel.narrow .chat-audio-panel .playback-button .playback-wrapper {
    @apply h-12;
    @apply bg-03;
}
.narrow-panel.narrow .chat-audio-panel .playback-button .playback-wrapper .btn {
    @apply left-4;
}
.narrow-panel.narrow .chat-audio-panel .playback-button .playback-wrapper .btn.btn-round .btn-content {
    @apply min-w-12 max-w-12;
    @apply bg-transparent;
}
.narrow-panel.narrow .playback-wrapper.listen-on {
    @apply w-28;
}
.narrow-panel.narrow .playback-wrapper.listen-on .loud-btn.btn.btn-round {
    @apply opacity-100;
    @apply translate-x-10;
}
.narrow-panel.narrow .playback-wrapper.listen-off {
    @apply w-20;
}
.narrow-panel.narrow .playback-wrapper.listen-off .loud-btn.btn.btn-round {
    @apply absolute;
    @apply opacity-0;
    @apply translate-x-10;
}
.narrow-panel.narrow .playback-wrapper.listen-on-to-off {
    @apply w-20;
    @apply animate-width-7-to-5;
}
.narrow-panel.narrow .playback-wrapper.listen-on-to-off .loud-btn.btn.btn-round {
    @apply absolute;
    @apply scale-0;
    @apply opacity-0;
    @apply animate-loud-hide-text-mode;
    @apply transition duration-300;
}
.narrow-panel.narrow .playback-wrapper.listen-off-to-on {
    @apply w-28;
    @apply animate-width-5-to-7;
}
.narrow-panel.narrow .playback-wrapper.listen-off-to-on .loud-btn.btn.btn-round {
    @apply absolute;
    @apply animate-loud-show-text-mode;
    @apply translate-x-10;
}
/* Buttons, Desktop view */
.wide .chat-audio-panel .recorder-wrapper {
    @apply relative flex;
    @apply h-14 w-14;
    @apply justify-center;
    @apply top-1;
    @apply rounded-full;
}
.wide .chat-audio-panel .recorder-wrapper .btn {
    @apply self-center;
    @apply m-0.5;
}
.wide .chat-audio-panel .recorder-wrapper.record-off .record-on-btn.btn {
    @apply absolute;
    @apply scale-0;
}
.wide .chat-audio-panel .recorder-wrapper.record-off .record-off-btn.btn {
    @apply scale-100;
}
.wide .chat-audio-panel .recorder-wrapper.record-off-to-on .record-off-btn.btn {
    @apply absolute;
    @apply scale-0;
    @apply animate-scale-to-5;
}
.wide .chat-audio-panel .recorder-wrapper.record-off-to-on .record-on-btn.btn {
    @apply scale-100;
    @apply animate-scale-to-full;
}
.wide .chat-audio-panel .recorder-wrapper.record-on .record-off-btn.btn {
    @apply absolute;
    @apply scale-0;
}
.wide .chat-audio-panel .recorder-wrapper.record-on .record-on-btn.btn {
    @apply scale-100;
}
.wide .chat-audio-panel .recorder-wrapper.record-on-to-off .record-on-btn.btn {
    @apply absolute;
    @apply scale-0;
    @apply animate-scale-to-5;
}
.wide .chat-audio-panel .recorder-wrapper.record-on-to-off .record-off-btn.btn {
    @apply scale-100;
    @apply animate-scale-to-full;
}
.chat-language-toggle.btn {
    @apply font-semibold text-lg text-icons-01 md:text-base;
}
.wide .chat-audio-panel .playback-button {
    @apply w-12;
    @apply rounded-full;
}
.wide .playback-wrapper .loud-btn {
    @apply hidden;
}

